# shake

./: .clang-format  .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Shakefile  args.c  args.h  bstrlib.h  cmake_install.cmake  dbg.h  keyvaluevec.c  keyvaluevec.h  runner.c  runner.h  script.c  scripts.c  scripts.h  shake.c  update_format.sh
Formula/: shake.rb
lib/: bstrlib.c  bstrlib.h
scripts/: run-test.sh
src/: args.c  args.h  cli.c  cli.h  colors.h  commands.c  commands.h  config.c  config.h  dbg.h  keyvaluevec.h  log.h  main.c  runner.c  runner.h  script.c  script.h  scripts.c  scripts.h  shake.h  util.h  utils.h
src/runscripts/: runscripts.c  runscripts.h
src/shakefile/: descriptions.c  functions.c  project.c  shakefile.c  shakefile.h
